[gd_scene load_steps=7 format=2]

[ext_resource path="res://Enemies/Slug/Slug.gd" type="Script" id=1]
[ext_resource path="res://assets/Tiles/tile_0056.png" type="Texture" id=2]
[ext_resource path="res://assets/Tiles/tile_0055.png" type="Texture" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=3]
radius = 3.20222

[sub_resource type="CapsuleShape2D" id=2]
radius = 3.203
height = 4.19693

[node name="Slug" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 35
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -8 )
frames = SubResource( 1 )
playing = true

[node name="Hitbox" type="CollisionShape2D" parent="."]
position = Vector2( 0, -3.377 )
shape = SubResource( 3 )

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="Collision" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( 0, -3.328 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="FloorRaycasts" type="Node2D" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="FloorRaycasts"]
position = Vector2( -8, 0 )
enabled = true
cast_to = Vector2( 0, 2 )
collision_mask = 33

[node name="RayCast2D2" type="RayCast2D" parent="FloorRaycasts"]
position = Vector2( 8, 0 )
enabled = true
cast_to = Vector2( 0, 2 )
collision_mask = 33

[node name="SideRaycasts" type="Node2D" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="SideRaycasts"]
position = Vector2( 5.5, -3 )
enabled = true
cast_to = Vector2( 2, 0 )
collision_mask = 33

[node name="RayCast2D2" type="RayCast2D" parent="SideRaycasts"]
position = Vector2( -5.5, -3 )
enabled = true
cast_to = Vector2( -2, 0 )
collision_mask = 33

[connection signal="body_entered" from="Hurtbox" to="." method="_on_Hurtbox_body_entered"]
